Clean up repository: remove unnecessary documentation files and update READMEs
- Remove 23+ development documentation files (guides, summaries, reports)
- Update main README.md: Java 17 requirement, remove deleted file references
- Update java-whiteboard-project/README.md: Java 17, simplified Maven setup
- Fix diagnostic issues: unused imports, CSS vendor prefixes, Java version compatibility
- Repository now has clean, production-ready documentation structure

--- a/java-whiteboard-project/src/main/webapp/index.html
+++ b/java-whiteboard-project/src/main/webapp/index.html
@@ -87,7 +87,7 @@
                         <button class="color-preset-compact" data-color="#EF4444" style="background:#EF4444" title="Red"></button>
                         <button class="color-preset-compact" data-color="#F59E0B" style="background:#F59E0B" title="Orange"></button>
                         <button class="color-preset-compact" data-color="#10B981" style="background:#10B981" title="Green"></button>
-                        <button class="color-preset-compact" data-color="#3B82F6" style="background:#3B82F6" title="Blue"></button>
+                        <button class="color-preset-compact" data-color="#0066ff" style="background:#0066ff" title="Blue"></button>
                         <button class="color-preset-compact" data-color="#8B5CF6" style="background:#8B5CF6" title="Purple"></button>
                     </div>
                 </div>
